--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,4 @@ flask-restful==0.3.8
 transformers==4.5.0
 torch==1.8.1+cpu
 torchvision==0.9.1+cpu
-torchaudio===0.8.1
-gunicorn==20.1.0
+torchaudio==0.8.1
