--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,3 +9,4 @@ jobs:
     steps:
       - checkout # check out the code in the project directory
       - run: python --version # run the `echo` command
+      - run: pip --version
