--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,11 @@ jobs:
   build:
     docker:
       - image: cimg/python:3.6.9 # the primary container, where your job's commands are run
-        # auth:
-        #   username: mydockerhub-user
-        #   password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout # check out the code in the project directory
       - run: python --version # run the `echo` command
       - run: pip --version
+      - run: ls -a
+      - run:
+          name: Installing dependencies
+          command: ls
