--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,30 @@ jobs:
       - run:
           name: Installing python dependencies
           command: pip install -r requirements.txt --find-links https://download.pytorch.org/whl/torch_stable.html
+      - run:
+          name: Running web app
+          command: python src/app.py
+      - persist_to_workspace:
+          root: ~/
+          paths: summarizer/models
+  test:
+    docker:
+      - image: cimg/python:3.6.9
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Listing files from models directory
+          command: ls models
+      - run:
+          name: Running tests
+          command: echo "Simulating tests..."
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
