--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
           name: Installing python dependencies
           command: pip install -r requirements.txt --find-links https://download.pytorch.org/whl/torch_stable.html
       - run:
-          name: Running web app
-          command: python src/app.py
+          name: Loading ML models
+          command: python src/load_models.py
       - persist_to_workspace:
           root: ~/
           paths: summarizer/models
