--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,13 @@ jobs:
       - run:
           name: Installing python dependencies
           command: pip install -r requirements.txt --find-links https://download.pytorch.org/whl/torch_stable.html
+      
+      - run:
+          name: Checking type consistency
+          command: mypy src
+      - run:
+          name: Checking code format
+          command: flake8
       - run:
           name: Loading ML models
           command: python src/load_models.py
@@ -28,11 +35,14 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          name: Listing files from models directory
-          command: ls models
+          name: Upgrading pip
+          command: pip install --upgrade pip
+      - run:
+          name: Installing python dependencies
+          command: pip install -r requirements.txt --find-links https://download.pytorch.org/whl/torch_stable.html
       - run:
           name: Running tests
-          command: echo "Simulating tests..."
+          command: pytest -W ignore::DeprecationWarning
 workflows:
   version: 2
   build_and_test:
